--- a/spoti-app/package.json
+++ b/spoti-app/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "bootstrap": "^4.3.1",
+    "concurrently": "^5.0.0",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
@@ -31,6 +33,8 @@
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@types/concurrently": "^4.1.0",
+    "@types/express": "^4.17.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
