--- a/spoti-app/package.json
+++ b/spoti-app/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "request": "^2.88.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -39,6 +40,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
+    "@types/request": "^2.48.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
