--- a/crud1/package.json
+++ b/crud1/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@types/cors": "^2.8.6",
     "bootstrap": "^4.3.1",
     "concurrently": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
