--- a/LoginWithFirebase/package.json
+++ b/LoginWithFirebase/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.4.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
