--- a/youtube-app/angular.json
+++ b/youtube-app/angular.json
@@ -128,6 +128,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "youtube-app"
+    }
+  },
+  "defaultProject": "youtube-app",
+  "cli": {
+    "analytics": "234a9612-5702-4cf7-98e2-d5234b297926"
+  }
 }
