--- a/dynamic-graphics/package.json
+++ b/dynamic-graphics/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.3",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "jquery": "^3.4.1",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
